# mvs-hakaton

./: .gitignore  README.md  USER_GUIDE.md  pyproject.toml  requirements.txt  start.bat
app/: config.py  llm_agent.py  main.py  models.py  parse_vk.py
app/api/: MWSClient.py  contents.py  main.py  mws_client.py  utils.py  web.py
frontend/: app.js  index.html  style.css
