[project]
name = "mvs-hakaton"
version = "0.1.0"
description = ""
authors = [
    {name = "Sofya Grigorovich, Kirill Logdanidi, Anastasia Vyrypaeva"}
]
readme = "README.md"
requires-python = "3.13.3"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "openai (>=2.8.1,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
